# structured-db-agnostic-query-builder

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MONGODB_ADAPTER.md  README.md  TECHNICAL_DOCUMENTATION.md  api.py  elasticsearch_model_generator.py  exaeeemple_queries.json  example_client_factory_usage.py  example_csv_usage.py  example_mongodb_usage.py  example_mongodb_usage_result.json  example_queries.json  example_usage.py  examples.csv  hello.py  process_excel_queries.py  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.py  streamlit_viewer.py  test_endpoints.py  test_improvements.py  test_ollama.py  user_queries_gemini.xlsx  user_queries_ollama.xlsx  utils.py
.github/workflows/: ci.yml
examples/: example_client_factory_usage.py  example_csv_usage.py  example_mongodb_usage.py  test_ollama.py
llm/: llm_agent.py  oldcode.py  oo.py  parsed_resume_batch_1.json  parsed_resume_batch_2.json
llm/agent_dir/: agent.py  test_agent_async.py  test_agent_sync.py
llm/entities_models/: candidate_pydantic.py  job_pydantic.py
query_builder/: __init__.py  _logging.py  orchestrator.py
query_builder/adapters/: __init__.py
query_builder/adapters/csv/: __init__.py  executor.py  query_translator.py  schema_extractor.py
query_builder/adapters/elasticsearch/: __init__.py  executor.py  query_translator.py  schema_extractor.py
query_builder/adapters/mongodb/: README.md  __init__.py  executor.py  query_translator.py  schema_extractor.py
query_builder/adapters/sql/: __init__.py  executor.py  query_translator.py  schema_extractor.py
query_builder/core/: __init__.py  interfaces.py  models.py
query_builder/execution/: __init__.py  executor.py  result_formatter.py
query_builder/llm/: __init__.py  client_factory.py
query_builder/query/: __init__.py  filter_builder.py  prompt_generator.py  translator.py
query_builder/schema/: __init__.py  extractor.py  model_builder.py  type_mappings.py
tests/: conftest.py  test_ai_eval_complex.py  test_ai_integration.py  test_core_models.py  test_csv_adapter.py  test_es_adapter.py  test_executor.py  test_filter_builder.py  test_llm_client_factory.py  test_model_builder.py  test_mongo_adapter.py  test_orchestrator.py  test_prompt_generator.py  test_quality_improvements.py  test_schema_extractor.py  test_sql_adapter.py  test_translator.py  test_type_mappings.py
tests/fixtures/: build_complex_dataset.py
